<resources>
    <string name="app_name">Homework3</string>
    <string name="icc_ranking_of_players">ICC Ranking of Players:</string>
    <string name="rank">Rank</string>
    <string name="player">Player</string>
    <string name="Team">Team</string>
    <string name="points">Points</string>
    <string name="top_left">Top Left</string>
    <string name="button2">Button2</string>
    <string name="android_absolutelayout">Android AbsoluteLayout</string>
    <string name="button_1">Button 1</string>
    <string name="ac">AC</string>
    <string name="plusDivideMinus">+/-</string>
    <string name="percent">%</string>
    <string name="divide">/</string>
</resources>