<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity3">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_y="40dp"
        android:layout_x="65dp"
        android:background="@drawable/linearstyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_absolutelayout"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/red"/>

    </LinearLayout>

    <AbsoluteLayout
        android:layout_width="250dp"
        android:layout_height="550dp"
        android:layout_y="100dp"
        android:background="@drawable/linearstyle"
        android:layout_x="80dp"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button2"
            android:layout_x="20dp"
            android:backgroundTint="@color/yellow"
            android:layout_y="70dp"
            android:textColor="@color/red"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="120dp"
            android:layout_y="220dp"
            android:text="@string/button_1"
            android:backgroundTint="@color/yellow"
            android:textColor="@color/red"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="20dp"
            android:layout_y="350dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/button_1"
            android:textColor="@color/red"/>

    </AbsoluteLayout>

</AbsoluteLayout>