<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:columnCount="4">

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/grey"
            android:text="@string/ac"
            android:textSize="30sp"
            android:layout_columnWeight="0"
            android:layout_column="0"
            android:textStyle="normal"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/grey"
            android:text="@string/plusDivideMinus"
            android:textSize="30sp"
            android:layout_columnWeight="0"
            android:layout_column="1"
            android:textStyle="normal"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/grey"
            android:text="@string/percent"
            android:textSize="30sp"
            android:layout_columnWeight="0"
            android:layout_column="2"
            android:textStyle="normal"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/orange"
            android:text="@string/divide"
            android:textSize="30sp"
            android:layout_columnWeight="1"
            android:layout_column="3"
            android:textStyle="normal"/>

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:columnCount="4">

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/grey"
            android:text="7"
            android:textSize="30sp"
            android:layout_columnWeight="0"
            android:layout_column="0"
            android:textStyle="normal"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/grey"
            android:text="8"
            android:textSize="30sp"
            android:layout_columnWeight="0"
            android:layout_column="1"
            android:textStyle="normal"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/grey"
            android:text="9"
            android:textSize="30sp"
            android:layout_columnWeight="0"
            android:layout_column="2"
            android:textStyle="normal"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/orange"
            android:text="x"
            android:textSize="30sp"
            android:layout_columnWeight="1"
            android:layout_column="3"
            android:textStyle="normal"/>

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:columnCount="4">

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/grey"
            android:text="4"
            android:textSize="30sp"
            android:layout_columnWeight="0"
            android:layout_column="0"
            android:textStyle="normal"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/grey"
            android:text="5"
            android:textSize="30sp"
            android:layout_columnWeight="0"
            android:layout_column="1"
            android:textStyle="normal"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/grey"
            android:text="6"
            android:textSize="30sp"
            android:layout_columnWeight="0"
            android:layout_column="2"
            android:textStyle="normal"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/orange"
            android:text="-"
            android:textSize="30sp"
            android:layout_columnWeight="1"
            android:layout_column="3"
            android:textStyle="normal"/>

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:columnCount="4">

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="0"
            android:backgroundTint="@color/grey"
            android:text="3"
            android:textSize="30sp"
            android:textStyle="normal" />

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="0"
            android:backgroundTint="@color/grey"
            android:text="2"
            android:textSize="30sp"
            android:textStyle="normal" />

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/grey"
            android:text="1"
            android:textSize="30sp"
            android:layout_columnWeight="0"
            android:layout_column="2"
            android:textStyle="normal"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/orange"
            android:text="+"
            android:textSize="30sp"
            android:layout_columnWeight="1"
            android:layout_column="3"
            android:textStyle="normal"/>

    </GridLayout>
    
    <GridLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:columnCount="3"
        android:layout_height="100dp">

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/grey"
            android:text="0"
            android:textSize="30sp"
            android:layout_columnWeight="8"
            android:layout_column="0"
            android:textStyle="normal"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/grey"
            android:text="."
            android:textSize="30sp"
            android:layout_columnWeight="0"
            android:layout_column="1"
            android:textStyle="normal"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/orange"
            android:text="="
            android:textSize="30sp"
            android:layout_columnWeight="1"
            android:layout_column="2"
            android:textStyle="normal"/>


    </GridLayout>
    
</LinearLayout>